# fastapi_tasks

./: .gitignore  pyproject.toml
.github/workflows/: api.yml
services/tasks_api/: main.py  pyproject.toml  tests.py
