[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["yyx-mba <yuanyexi1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
